creo infra, entidades de dominio y primer controller

--- a/.env
+++ b/.env
@@ -18,3 +18,8 @@
 APP_ENV=dev
 APP_SECRET=2295e9158928e74f342145e38d1c3484
 ###< symfony/framework-bundle ###
+
+
+###> redis ###
+REDIS_URL=redis://redis.local
+###< redis ###
