--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,22 @@
         "symfony/yaml": "7.0.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.4",
+        "mockery/mockery": "2.0.x-dev",
+        "phpmd/phpmd": "dev-master",
+        "phpstan/extension-installer": "^1.3",
+        "phpstan/phpstan": "1.11.x-dev",
+        "phpstan/phpstan-symfony": "1.4.x-dev",
+        "phpunit/phpunit": "9.6.*",
+        "rector/rector": "dev-main",
+        "symfony/maker-bundle": "*"
     },
     "config": {
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
         },
         "sort-packages": true
     },
@@ -54,6 +64,23 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
+        ],
+        "analysis": [
+            "composer phpstan",
+            "composer rector",
+            "composer test"
+        ],
+        "phpstan": [
+            "phpstan analyse -c phpstan.neon src --level 7 --memory-limit 300M"
+        ],
+        "rector": [
+            "vendor/bin/rector process src tests"
+        ],
+        "test": [
+            "vendor/bin/phpunit -c phpunit.xml.dist --testdox"
+        ],
+        "coverage": [
+            "XDEBUG_MODE=coverage vendor/bin/phpunit -c phpunit.xml.dist --testdox --coverage-text"
         ]
     },
     "conflict": {
